--- a/HippoAndroid/app/src/main/res/layout/activity_main.xml
+++ b/HippoAndroid/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.cornell.engineering.ewh.hippoandroid.MainActivity">
+    tools:context="edu.cornell.engineering.ewh.hippoandroid.VideoCallActivity">
 
     <TextView
         android:layout_width="wrap_content"
