--- a/HippoAndroid/app/src/main/res/layout/activity_main.xml
+++ b/HippoAndroid/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     tools:context="edu.cornell.engineering.ewh.hippoandroid.MainActivity">
 
-    <TextView
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/session_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
