--- a/HippoAndroid/app/src/main/res/layout/activity_main.xml
+++ b/HippoAndroid/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,17 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/my_toolbar"
-        android:layout_width="360dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        tools:layout_editor_absoluteY="6dp" />
+        tools:layout_editor_absoluteY="8dp" />
 
     <ListView
         android:id="@+id/session_list"
