--- a/HippoAndroid/app/src/main/res/layout/activity_login.xml
+++ b/HippoAndroid/app/src/main/res/layout/activity_login.xml
@@ -18,11 +18,11 @@
         <TextView
             android:id="@+id/title_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:drawableLeft="@drawable/hippo"
             android:text="@string/title_text"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:textColor="@android:color/black"
             android:textSize="60sp" />
 
